--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ index.html
 <body>
     <!-- Header Section -->
     <header>
-        <img src="your-logo.png" alt="Iqbal's Ink Pen Logo" class="logo">
+        <img src="Iqbal's Ink Pen.png" alt="Iqbal's Ink Pen Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="#home"><i class="fas fa-home icon"></i>Home</a></li>
@@ -43,7 +43,7 @@ index.html
             <div class="blog-post">
                 <h3>Post Title</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel purus at sapien.</p>
-                <img src="qr-code.png" alt="QR Code" class="qr-code">
+                <img src="iqbalsinkpen.png" alt="QR Code" class="qr-code">
             </div>
         </section>
 
